# imgsearch

./: .gitignore  README.md  package-lock.json  package.json
backend/: .eslintrc.json  tsconfig.json
backend/src/: config.ts  duckduckgo.ts  exceptions.ts  facebook.ts  google.ts  images.ts  scraper.ts  server.ts  types.ts  validate.ts
docs/: color_pickr.txt  webview.txt
frontend/: .eslintrc.json  tsconfig.json
frontend/css/: styles.scss
frontend/html/: index.html
frontend/src/: canvas.ts  canvas_info.ts  canvas_selection.ts  images.ts  index.ts  list.ts  log.ts  resizer.ts  settings.ts  types.ts
scripts/: build.js  copy.js  package.js  watch.js
webview/: CMakeLists.txt
webview/msvs/: icon.rc  imgsearch.sln  imgsearch.vcxproj  imgsearch.vcxproj.filters
webview/src/: main.cpp
